# spotify

./: .gitignore  README.md  docker-compose.yml  loadData.py  pyproject.toml  requirements.txt
src/: __init__.py  config.py  loader.py
tests/: pytest.ini  test_loader.py
